# Teaism

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  log  main.cpp  main.cu  tests.cu  tests_conv2d.cu  tests_data.cu  tests_gaussian_initializer.cu  tests_softmax.cu  tests_tensor.cu
basics/: .network.cu.swp  commons.hpp  initializer.hpp  layer.hpp  network.cu  network1.cu  session.hpp  tensor.cu  tensor.hpp
conv/: .conv.cuh.swp  blur.cu  blur.out  conv.cuh  packet.cuh
datasets/cifar10/: convert_img.py  convert_lst.py  imgs  test.txt  train.txt  train1.txt
experimental/: const_initializer.hpp  conv2d.hpp  example1.cu  initializer.hpp  layer.hpp  main.cpp  tensor.hpp
initializers/: const_initializer.cu  const_initializer.hpp  gaussian_kernel_initializer.cu  gaussian_kernel_initializer.cuh  gaussian_kernel_initializer.hpp
layers/: .conv2d.cu.swp  .relu.cu.swp  conv2d.cu  conv2d.cuh  conv2d.hpp  conv2d1.cu  conv2d_old.cu  conv2dopt.cu  cross_entropy_loss.cu  data.cu  dropout.cu  fc.cu  lrn.cu  pooling.cu  relu.cu  softmax.cu  softmax_loss.cu
models/: load_model.cu
networks/: lenet.hpp
perf/: tf_lenet.py
tests/: .demo_cifar10_training.cu.swp  .tests_cross_entropy_loss.cu.swp  demo_cifar10.cu  demo_cifar10_network.cu  demo_cifar10_training.cu  tests_alexnet.cu  tests_bp_cifar10.cu  tests_cifar10.cu  tests_const_initializer.cu  tests_conv2d.cu  tests_conv2dopt.cu  tests_cross_entropy_loss.cu  tests_data.cu  tests_debug_fc_bp.cu  tests_dropout.cu  tests_fc.cu  tests_fc_bp.cu  tests_gaussian_initializer.cu  tests_get_tops_dims.cu  tests_lenet.cu  tests_lenet_fc.cu  tests_lrn.cu  tests_network.cu  tests_pooling.cu  tests_pooling_back.cu  tests_relu.cu  tests_relu_back.cu  tests_rng.cu  tests_softmax.cu  tests_tensor.cu
tmp/: blur.cu  conv.cu  tensor.cuh
tmp/test/: 1  (+3 more)
utils/: computations.cu  cuda_utils.cu  load_model.hpp  matrix.hpp  utils.cu
(+27 files in other folders)
